******************************************
*  Social Networks Visualiser (SocNetV)  *
******************************************

ChangeLog:

Version 0.80 - September 30  2009  (PROJECTED)
Codename: "supersyntages.gr"
----------------------------
- New statistic: Triad Census.
- Read support for list file.
- Much improved Dot format support. 
- Added keyboard shortcuts for Centralities
- Fixed bug #416965: Not displaying nodes when loading GraphViz files
- Fixed bug #396124: GBC different in Pajek cp. to SocNetV
- Fixed bug #415277: network files were not loaded on startup
- Fixed bug #379225 side note: GraphML format did not preserve node labels.
- Fixed bug #418023: rewiring parameter typo in Graph::createRandomNetSmallWorld.
- Fixed bug #420708 on GraphML output files, not transforming special XML characters, like &, to ampersand codes, like &amp;  
- Fixed bug #418550: Clear selection when clicking on empty canvas.
- Edited .spec to enable proper Fedora package creation.
- Changed ProgressBar behaviour: bars appear only if nodes are more than 300 or edges more than 1000.
- New feature: the embedded text editor can be used to copy/paste directly network data
- Updated user manual.


Version 0.70 - June 30  2009
Codename: "Summertime"
----------------------------
- First web Crawler implementation. Use Shift+C to test it. Doesn't support frames yet...
- Multiple nodes can be selected with mouse. Press and hold left mouse button somewhere on the canvas, then move mouse to test it.
- Fixed bug #379204 which was crashing SocNetV when creating small worlds above 201 nodes
- Fixed bug #381096 crashing SocNetV in Edge Filtering when an edge was reciprocal.
- Fixed bug #381094 weight changes not recorded correctly in symmetric edges.
- To speed things up, the on-the-fly Clustering Coef. and Average Distance
calculation was removed from random network creation routines.
- Random Layout is back!
- Speed improvement in FindNode method.